# NextWordPredicter

./: CMakeLists.txt  README.md
include/: WordGraph.hpp
src/: WordGraph.cpp  main.cpp
